# test_onnxruntime

./: CMakeLists.txt  README.md  main.cpp
common/: common.cpp  common.h
sherpa-onnx-tts/: CMakeLists.txt  lexicon.txt  sherpa_tts.cpp  tokens.txt
sherpa-onnx-tts/sherpa-onnx/: libcargs.dylib  libespeak-ng.dylib  libkaldi-decoder-core.dylib  libkaldi-native-fbank-core.dylib  libpiper_phonemize.dylib  libsherpa-onnx-c-api.dylib  libsherpa-onnx-core.dylib  libsherpa-onnx-fst.dylib  libsherpa-onnx-kaldifst-core.dylib  libucd.dylib
silero-vad/: CMakeLists.txt  silero_vad_v4.cpp  silero_vad_v5.cpp  wav.h
yolo-nas/: CMakeLists.txt  yolo_nas.cpp
yolov5-lite/: CMakeLists.txt  yolov5_lite.cpp
